--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
                 <button type="button" class="btn btn-primary">Submit</button>
-                <p>Dont have an Account? <a href="/html/signUp.html">Sign-up</a></p>
+                <p>Dont have an Account? <a href="../public/html/signUp.html">Sign-up</a></p>
             </form>
         </div>
     </div>
